[gd_scene load_steps=22 format=2]

[ext_resource path="res://scripts/battle_sys/hurtbox.gd" type="Script" id=1]
[ext_resource path="res://assets/audio/enemy/haniwa/tick.wav" type="AudioStream" id=2]
[ext_resource path="res://assets/sprites/Enemies/Haniwa/Haniwa_dash.png" type="Texture" id=3]
[ext_resource path="res://enemy/Haniwa_knight/states/idle.gd" type="Script" id=4]
[ext_resource path="res://enemy/Haniwa_knight/haniwa_knight.gd" type="Script" id=5]
[ext_resource path="res://enemy/Haniwa_knight/states/move.gd" type="Script" id=6]
[ext_resource path="res://enemy/Haniwa_knight/states/dead.gd" type="Script" id=7]
[ext_resource path="res://enemy/white.shader" type="Shader" id=8]
[ext_resource path="res://enemy/Haniwa_knight/states/attack.gd" type="Script" id=9]
[ext_resource path="res://enemy/Haniwa_knight/states/charge.gd" type="Script" id=10]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 10, 32 )

[sub_resource type="ShaderMaterial" id=2]
shader = ExtResource( 8 )
shader_param/is_white = false

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 128, 32 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 56, 16 )

[sub_resource type="RectangleShape2D" id=5]
extents = Vector2( 10, 36 )

[sub_resource type="Animation" id=6]
length = 0.4
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 5, 6, 7 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/Sprite/spear:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ Vector2( 0, 0 ), Vector2( 16, 0 ), Vector2( 24, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("rotator/hitbox/collider:disabled")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0.2 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=7]
length = 0.8
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11, 12, 13, 14, 15 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("rotator/Sprite/spear:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}

[sub_resource type="Animation" id=8]
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 1, 2, 3, 4 ]
}

[sub_resource type="Animation" id=9]
length = 0.2
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ 5, 6 ]
}

[sub_resource type="Animation" id=10]
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[sub_resource type="Animation" id=11]
length = 0.2
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("rotator/Sprite:material:shader_param/is_white")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}

[node name="haniwa_knight" type="KinematicBody2D"]
collision_layer = 0
script = ExtResource( 5 )

[node name="physic_collider" type="CollisionShape2D" parent="."]
visible = false
position = Vector2( 0, -32 )
shape = SubResource( 1 )
disabled = true

[node name="rotator" type="Node2D" parent="."]

[node name="Sprite" type="Sprite" parent="rotator"]
material = SubResource( 2 )
position = Vector2( 16, -40 )
texture = ExtResource( 3 )
hframes = 5
vframes = 4
frame = 1

[node name="spear" type="Sprite" parent="rotator/Sprite"]
show_behind_parent = true
texture = ExtResource( 3 )
hframes = 5
vframes = 4
frame = 16

[node name="wall_detect" type="RayCast2D" parent="rotator"]
position = Vector2( 48, -32 )
enabled = true
cast_to = Vector2( 8, 0 )

[node name="cliff_detect" type="RayCast2D" parent="rotator"]
position = Vector2( 48, 0 )
enabled = true
cast_to = Vector2( 0, 10 )

[node name="player_detect" type="Area2D" parent="rotator"]
visible = false
collision_layer = 0
collision_mask = 128

[node name="collider" type="CollisionShape2D" parent="rotator/player_detect"]
position = Vector2( 128, -48 )
shape = SubResource( 3 )

[node name="hitbox" type="Area2D" parent="rotator"]
visible = false
collision_layer = 4
collision_mask = 64

[node name="collider" type="CollisionShape2D" parent="rotator/hitbox"]
position = Vector2( 32, -40 )
shape = SubResource( 4 )
disabled = true

[node name="hurtbox" type="Area2D" parent="."]
visible = false
collision_layer = 8
collision_mask = 0
script = ExtResource( 1 )

[node name="collider" type="CollisionShape2D" parent="hurtbox"]
position = Vector2( 0, -36 )
shape = SubResource( 5 )

[node name="anim" type="AnimationPlayer" parent="."]
anims/attack = SubResource( 6 )
anims/death = SubResource( 7 )
anims/idle = SubResource( 8 )
anims/ready = SubResource( 9 )

[node name="anim_fx" type="AnimationPlayer" parent="."]
anims/disappear = SubResource( 10 )
anims/hit = SubResource( 11 )

[node name="VisibilityEnabler2D" type="VisibilityEnabler2D" parent="."]
visible = false
position = Vector2( 1.90735e-06, -32 )
scale = Vector2( 8.85, 3.05 )
freeze_bodies = false
pause_particles = false
pause_animated_sprites = false
physics_process_parent = true

[node name="states" type="Node" parent="."]

[node name="idle" type="Node" parent="states"]
script = ExtResource( 4 )

[node name="move" type="Node" parent="states"]
script = ExtResource( 6 )

[node name="dead" type="Node" parent="states"]
script = ExtResource( 7 )

[node name="attack" type="Node" parent="states"]
script = ExtResource( 9 )

[node name="charge" type="Node" parent="states"]
script = ExtResource( 10 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
bus = "fx"

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
bus = "fx"

[connection signal="body_entered" from="rotator/player_detect" to="." method="_on_player_detect_body_entered"]
[connection signal="body_exited" from="rotator/player_detect" to="." method="_on_player_detect_body_exited"]
[connection signal="area_entered" from="rotator/hitbox" to="." method="_on_hitbox_area_entered"]
